irght side spacing bugfix

--- a/hwcentral/static/css/index.css
+++ b/hwcentral/static/css/index.css
@@ -126,7 +126,7 @@ a:hover {
 }
 
 #horizontaldiv3 #drivercolumn {
-    padding: 30px;
+    padding: 30px 20px;
     text-align: justify;
 }
 
@@ -142,6 +142,7 @@ a:hover {
 
 #horizontaldiv3 #drivercolumn #feature_list > ul {
     padding-left: 37px;
+    list-style: none;
 }
 
 #horizontaldiv3 #drivercolumn #feature_list > ul > li {
@@ -154,7 +155,7 @@ a:hover {
     font-family: 'Glyphicons Halflings';
     font-size: 25px;
     position: absolute;
-    left: 31px;
+    left: 21px;
     margin-top: 2px;
 }
 
@@ -325,6 +326,10 @@ a:hover {
 
     #horizontaldiv2 #vid-holder {
         padding: 10px;
+    }
+
+    #horizontaldiv3 #drivencolumn {
+        padding: 30px 15px;
     }
 
     #horizontaldiv3 #drivercolumn #quick_intro {
